--- a/temp.html
+++ b/temp.html
@@ -1,27 +1,27 @@
-<div class="b-conversations-list">
-    {{#each conversationsList}}
-    <div class="b-conversation-wrapper">
-        <div class="b-conversation">
-            <figure class="b-image-wrapper">
-                {{#if this.avatar_url}}
-                <image src="{{this.avatar_url}}" width="47" height="47" alt="avatar" class="b-image" src="" />
-                {{else}}
-                <image src="static/img/chessboard.png" width="47" height="47" alt="avatar" class="b-image" src="" />
-                {{/if}}
-            </figure>
-            <div class="b-message-wrapper">
-                <div class="b-message">
-                    <p class="b-conversation-name">{{this.name}}</p>
-                    <p class="b-conversation-last-message">{{this.message.text}}</p>
-                </div>
+<secton id="viewport" class="b-page-wrapper">
+    <div class="b-page">
+        <!-- if (user.isAuthorized) -->
+        <section class="b-chat-viewport-wrapper">
+            <div class="b-chat-viewport">
+                <aside class="b-conversations-wrapper">
+                    <div class="b-conversations">
+                        <!-- aside profile -->
+                        {{> AsideProfile}}
+                        <!-- aside search -->
+                        {{> AsideSearch}}
+                        <!-- conversations list -->
+                        {{> ConversationsList}}
+                    </div>
+                </aside>
+                <section class="b-chat-window-wrapper">
+                    <div class="b-chat-window">
+                        <p class="b-chat-window-empty">Choose a conversation to send a message.<p>
+                    <div>
+                </section>
             </div>
-            <div class="b-message-info">
-                <p class="b-time">{{this.message.time}}</p>
-                {{#if this.message.unreadMessages}}
-                <p class="b-unread-messages">{{this.message.unreadMessages}}</p>
-                {{/if}}
-            </div>
-        </div>
+        </section>
+        <!-- else -->
+
+        <!-- -->
     </div>
-    {{/each}}
-</div>
+</secton>
