minor refactor, almost completed main chatview page, major changes in data structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="./static/css/style.less" />
-    <title>Webchat App</title>
+    <title>ModemWebchat. So slow. So nasty.</title>
 </head>
 
 <body>
