--- a/temp.html
+++ b/temp.html
@@ -15,8 +15,9 @@
                 </aside>
                 <section class="b-chat-window-wrapper">
                     <div class="b-chat-window">
-                        <p class="b-chat-window-empty">Choose a conversation to send a message.<p>
-                    <div>
+                        <p class="b-chat-window-empty">Choose a conversation to send a message.
+                        <p>
+                        <div>
                 </section>
             </div>
         </section>
