added error pages and slightly refactored main app

--- a/404.html
+++ b/404.html
@@ -8,15 +8,17 @@
 
 <body>
     <div id="root">
-        <secton id="viewport" class="b-page-wrapper">
+        <main id="viewport" class="b-page-wrapper">
             <div class="b-page">
                 <section class="b-error-wrapper">
                     <div class="b-error">
-                                      
+                       <h1 class="b-error-title">404</h1>
+                       <p class="b-error-message">Page not found. That's so sad ;(</p>
+                       <a href="/" class="b-link"><- go back to the chat</a>               
                     </div>
                 </section> 
             </div>
-        </section>
+        </main>
     </div>
 </body>
 
