--- a/auth.html
+++ b/auth.html
@@ -7,7 +7,15 @@
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="root">
+
+        <section class="b-auth-page-wrapper">
+            <div class="b-auth-page">
+
+            </div>
+        </section>
+
+    </div>
     <script src="./src/auth.js" type="module"></script>
     
 </body>
