--- a/index.html
+++ b/index.html
@@ -3,20 +3,12 @@
 
 <head>
     <link rel="stylesheet" href="./static/css/style.less" />
-    <title>ModemWebchat. So slow. So nasty.</title>
+    <title>ModemWeb App. So slow. So nasty.</title>
 </head>
 
 <body>
-    <div id="root">
-
-        <section class="b-auth-page-wrapper">
-            <div class="b-auth-page">
-
-            </div>
-        </section>
-
-    </div>
-    <script src="./src/auth.js" type="module"></script>
+    <div id="root"></div>
+    <script src="./src/index.js" type="module"></script>
     
 </body>
 
