--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <div id="root"></div>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <script src="./src/index.js" type="module"></script>
     
 </body>
