--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="root"></div>
     <script src="./src/index.js" type="module"></script>
+    <script src="./src/modalView.js"></script>
     
 </body>
 
